# python-portfolio

./: .gitignore  README.md  pyproject.toml  requirements.txt
apis/flight_deals/: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py
apis/kanye_quotes/: main.py
apis/nutritracker/: main.py
apis/spotify_playlist/: main.py  scrapper.py  spotify_client.py
apis/stock_alerts/: main.py
apis/stock_alerts/data/: debug_data.py
automation/birthday_wisher/: birthday.py  quote_by_email.py
automation/birthday_wisher/data/: birthdays.csv
automation/mail_merger/: main.py
automation/selenium_webdriver/: python_events.py  wiki_interaction.py
automation/ycombinator_news/: ycombinator_news.py
basics/coffee_machine/: machine.py
basics/coffee_machine/data/: main.py
basics/dots/: dots_picture.py
basics/tkinter/: miles2km.py
basics/top_movies_scraper/: top-movies.py
basics/top_movies_scraper/data/: movies.txt
data_projects/nato_phonetic_alphabet/: main.py
games/cookie_clicker/: cookie.py
games/pong/: ball.py  game.py  paddle.py  score.py
games/quiz_brain/: main.py  quiz_brain.py
games/quizzler_app/: data.py  quiz_brain.py  ui.py
games/snake/: food.py  game.py  score.py  snake.py
games/us_states_game/: main.py
games/us_states_game/data/: states
gui-apps/flashcard_app/: cards.py  main.py
gui-apps/password_manager/: generator.py  main.py
gui-apps/pomodoro_timer/: main.py
oop_projects/coffee_machine/: main.py
oop_projects/race/: car_manager.py  main.py  player.py  scoreboard.py  turtle_race.py
(+3 files in other folders)
